[gd_scene load_steps=3 format=3 uid="uid://ddu4fiutn7mwc"]

[ext_resource type="Script" path="res://systems/card_combat/enemy_player.gd" id="1_w2nxe"]
[ext_resource type="Script" path="res://systems/ui/tooltips/show_tooltip.gd" id="2_myi76"]

[node name="EnemyPlayer" type="ReferenceRect"]
offset_right = 250.0
offset_bottom = 81.0
size_flags_horizontal = 0
script = ExtResource("1_w2nxe")

[node name="ResourceContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_right = 540.0
offset_bottom = 540.0

[node name="CornerBackground" type="TextureRect" parent="ResourceContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0

[node name="KarmaIcon" type="TextureRect" parent="ResourceContainer"]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 164.0
offset_bottom = 164.0

[node name="Label" type="Label" parent="ResourceContainer/KarmaIcon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShowTooltip" type="Control" parent="ResourceContainer/KarmaIcon"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_myi76")
title = "Your Karma"
text = "Cards on your side of the boards will add their
combined cost to your karma total each turn.
Whenever your karma would go below zero the excess
amount is substracted from your health instead."

[node name="Health" type="Control" parent="ResourceContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthBar" type="TextureProgressBar" parent="ResourceContainer/Health"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
fill_mode = 5
radial_fill_degrees = 90.0
radial_center_offset = Vector2(270, 270)

[node name="HealthIcon" type="TextureRect" parent="ResourceContainer/Health"]
offset_left = 296.0
offset_right = 428.0
offset_bottom = 132.0

[node name="Label" type="Label" parent="ResourceContainer/Health/HealthIcon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -53.0
offset_top = -1.0
offset_right = 53.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "20"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShowTooltip" type="Control" parent="ResourceContainer/Health/HealthIcon"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_myi76")
title = "Your Health"
text = "Is lowered whenever an enemy card attacks an empty tile.
If it drops to zero you'll die!"
